...

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar_product_list" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/products_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/xxs_margin"
        android:fadingEdgeLength="@dimen/default_margin"
        android:overScrollMode="never"
        android:requiresFadingEdge="vertical"
...
