...
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/icv_search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="auto"
                android:hint="Search"
                android:imeOptions="actionSearch"
                android:inputType="text"
...
